Correct a regression in Bidi ordering and simplify the way in which we determine whether Arabic shaping needs to be performed depending on the capabilities of the system and whether we are rendering character by character. Bug 192919, r/sr=rbs.